// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validator types jora-query from js jora-fail.js 1`] = `
Array [
  Array [
    "unknown file",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "error  Fail  <pwd>/test/fixtures/cli/validate/jora-fail.js",
  ],
  Array [
    "",
  ],
  Array [
    "1 problems (1 errors, 0 warnings)",
  ],
]
`;

exports[`validator types jora-query from js jora-ok.js 1`] = `Array []`;

exports[`validator types raw jora-query fail.jora 1`] = `
Array [
  Array [
    "unknown file",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "error  Fail  <pwd>/test/fixtures/cli/validate/fail.jora",
  ],
  Array [
    "",
  ],
  Array [
    "1 problems (1 errors, 0 warnings)",
  ],
]
`;

exports[`validator types raw jora-query ok.jora 1`] = `Array []`;

exports[`validator types raw jora-query rules.jora 1`] = `
Array [
  Array [
    "unknown file",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "info  Auto info message  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "info  Info message without assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "info  Info with assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "warn  Warn without assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "warn  Warn with assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "",
  ],
  Array [
    "input.json",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "info  Auto info for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "info  Info for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "warn  Warn for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "error  Error for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "da95abcf6bbf9b157ff6",
  ],
  Array [
    "error  Something wrong  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "",
  ],
  Array [
    "5 problems (2 errors, 3 warnings)",
  ],
]
`;

exports[`validator types with reference 1`] = `
Array [
  Array [
    "unknown file",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "info  Auto info message  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "info  Info message without assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "info  Info with assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "warn  Warn without assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "warn  Warn with assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "",
  ],
  Array [
    "input.json",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "info  Auto info for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "info  Info for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "warn  Warn for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "error  Error for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "da95abcf6bbf9b157ff6",
  ],
  Array [
    "error  Something wrong  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "",
  ],
  Array [
    "reference.json",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "error  Reference exists  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "",
  ],
  Array [
    "6 problems (3 errors, 3 warnings)",
  ],
]
`;

exports[`with config explicit reference 1`] = `
Array [
  Array [
    "input.json",
  ],
  Array [
    "da95abcf6bbf9b157ff6",
  ],
  Array [
    "error  Module ./src/index.ts should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/index2.ts should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/sub-module.ts should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/index2.css should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/test.txt should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/dyn.ts should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/statoscope.png should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  foo@1.0.0 should not be used  webpack/restricted-packages",
  ],
  Array [
    "Instances:",
  ],
  Array [
    "- node_modules/foo  1.0.0",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "error  Usage of ../node_modules/is-array/index.js was increased from 0 to 4  webpack/diff-deprecated-modules",
  ],
  Array [
    "error  Usage of ../node_modules/css-loader/dist/runtime/api.js was increased from 0 to 2  webpack/diff-deprecated-modules",
  ],
  Array [
    "error  Usage of ../node_modules/css-loader/dist/runtime/getUrl.js was increased from 0 to 2  webpack/diff-deprecated-modules",
  ],
  Array [
    "error  Usage of is-array was increased from 2 to 4  webpack/diff-deprecated-packages",
  ],
  Array [
    "",
  ],
  Array [
    "12 problems (12 errors, 0 warnings)",
  ],
]
`;

exports[`with config explicit single 1`] = `
Array [
  Array [
    "input.json",
  ],
  Array [
    "da95abcf6bbf9b157ff6",
  ],
  Array [
    "error  Module ./src/index.ts should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/index2.ts should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/sub-module.ts should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/index2.css should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/test.txt should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/dyn.ts should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  Module ./src/statoscope.png should not be used  webpack/restricted-modules",
  ],
  Array [
    "error  foo@1.0.0 should not be used  webpack/restricted-packages",
  ],
  Array [
    "Instances:",
  ],
  Array [
    "- node_modules/foo  1.0.0",
  ],
  Array [
    "",
  ],
  Array [
    "8 problems (8 errors, 0 warnings)",
  ],
]
`;
